--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="wback"> 
     <span class="material-symbols-outlined">clear_night</span>
   <div class="content">
-    <h3><a onClick="myFunction()">YORDIN</a></h3>
+    <h3><a onClick="myFunction()">FROYO</a></h3>
   </div>
 </div>
 </body>
