--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <span class="material-symbols-outlined">clear_night</span>
   <div class="content">
     <h3><a onClick="myFunction()">FROYO</a></h3>
+    <p1><a onClick="myFunction()">CLOTHING</a></p1>
   </div>
 </div>
 </body>
