--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <title>Froyoclothing - Homepage</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="icon" type="image/png" href="img/moon.png?">
 </head>
 <body>
   <script src="script.js"></script>
+  <h1>FROYO</h1>
 </body>
 </html>
