--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Froyoclothing - Homepage</title>
+  <title>
+  Froyoclothing - Homepage
+  <footer>&copy; Copyright 2022 Froyoclothing</footer>
+  </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="img/moon.png?">
